# buildTemplate

./: .gitmodules  CMakeLists.txt  README.md  compile.sh
include/: hello.hxx
src/: hello.cxx
